2007-10-14  Jens Granseuer  <jensgr@gmx.net>

	* gnome-theme-info.c: (gnome_theme_init): fix invalid use after free I
	caused with the last commit

2007-09-29  Jens Granseuer  <jensgr@gmx.net>

	* theme-thumbnail.c: (generate_gtk_theme_thumbnail),
	(generate_theme_thumbnail_async),
	(generate_gtk_theme_thumbnail_async): move the code for setting the
	color scheme for gtk thumbnails to the gtk-specific function. This
	means we will probably extract it twice for most thumbnails, but it
	makes for much cleaner code. Also add the scheme bit to the synchronous
	version.

2007-09-25  Jens Granseuer  <jensgr@gmx.net>

	* theme-thumbnail.c: patch up an outdated comment about how the
	thumbnailer protocol works

2007-09-25  Jens Granseuer  <jensgr@gmx.net>

 	Prevent lots of thumbs from being created with the color scheme of the
	currently active theme (see comment #15 in bug 460023). Maybe it also
	helps with some of the other color-related issues.

	* theme-thumbnail.c: (create_gtk_theme_pixbuf),
	(generate_theme_thumbnail_async): when creating GTK theme thumbnails,
	explicitly pass the theme's color scheme to override the xsetting

2007-09-16  Jens Granseuer  <jensgr@gmx.net>

	Patch by: Darren Kenny <darren.kenny@sun.com>

	* theme-thumbnail.c: (generate_meta_theme_thumbnail_async),
	(generate_gtk_theme_thumbnail_async),
	(generate_metacity_theme_thumbnail_async),
	(generate_icon_theme_thumbnail_async): don't return values from void
	functions. Fixes building with Sun's Forte compiler (bug #473967)

2007-08-23  Jens Granseuer  <jensgr@gmx.net>

	* gnome-theme-info.c: (gnome_theme_is_writable): cast to proper type
	* theme-thumbnail.c: (create_metacity_theme_pixbuf): free the metacity
	theme after use (bug #469531)

2007-08-21  Jens Granseuer  <jensgr@gmx.net>

	* gnome-theme-info.c: (gnome_theme_info_find_by_type_helper):
	Properly check all stored themes if necessary. This fixes cases where
	e.g. a metacity theme in ~/.themes would hide a GTK theme with the